Refactor SchedulerHandoffBenchmark to use RequestData for request and response handling